# VROverlaySample

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
desktopdup/: CMakeLists.txt  compileshader.cpp  compileshader.h  duplicator.cpp  duplicator.h  main.cpp  pointershape.cpp  pointershape.h  quad.cpp  quad.h  quad.hlsl
vrorigin/: CMakeLists.txt  main.cpp
vrutil/: CMakeLists.txt  D3DManager.cpp  D3DManager.h  OverlayApp.cpp  OverlayApp.h  OverlayItem.cpp  OverlayItem.h  vrutil.h
